# utility_cxx

./: .gitignore  CMakeLists.txt  README.md  makefile
src/: bash_color.h  bash_color.hpp  config.hpp  fileio.cpp  fileio.hpp  logger.cpp  logger.hpp  main.cpp  test.h  tree.cpp  utest.cpp  utest.hpp  utility.cpp  utility.hpp  utility_cxx.cpp  utility_cxx.hpp  utility_cxx_test.hpp
src/TMP/: ConsoleLogger.h  ILogger.h  auto_ptr.cpp  auto_ptr.hpp  constants.hpp  join.cpp  observable.cpp  observable.hpp  observer.hpp  selectfd.cpp  singleton.cpp  singleton.hpp  streamy.c  streamy.h  symtab.c  symtab.h  utility copy.cpp  utility copy.hpp  utility.h  utility.hpp
src/tests/: utility_cxx_test.cpp
